// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`holdings — 계좌별 보유 + IRP 한도 (대시보드 v4 이식) > 실행안 완료 후 상태 요약 스냅샷 1`] = `
{
  "costSum": 0,
  "eqEffPct": 81.85626702997276,
  "irpRatio": 0.5954038997214485,
  "irpRisk": 1710,
  "irpRoom": 300.39999999999986,
  "irpTot": 2872,
  "pensionSavings": 3000,
  "tot": 5872,
  "totPL": 0,
  "totRet": null,
  "valSum": 0,
}
`;

exports[`holdings — 계좌별 보유 + IRP 한도 (대시보드 v4 이식) > 현재 보유(2026-08) 요약 — IRP 70% 한도 검사 1`] = `
{
  "costSum": 0,
  "eqEffPct": 31.447547683923705,
  "irpRatio": 0.26114206128133705,
  "irpRisk": 750,
  "irpRoom": 1260.3999999999999,
  "irpTot": 2872,
  "pensionSavings": 3000,
  "tot": 5872,
  "totPL": 0,
  "totRet": null,
  "valSum": 0,
}
`;
